--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/vue3": "^6.5.16",
     "@vitejs/plugin-vue": "^4.0.0",
     "babel-loader": "^8.3.0",
+    "chromatic": "^6.15.0",
     "vite": "^4.0.0",
     "vue-loader": "^16.8.3"
   }
